...
  return (
    <View style={styles.container}>
      {(searchFilter || sortOptions || filterConfigs) && (
        <View style={styles.toolbar}>
          {searchFilter && (
            <Searchbar
              testID="search-input"
              placeholder={searchPlaceholder}
              value={searchQuery}
              onChangeText={setSearchQuery}
              style={styles.searchbar}
              inputStyle={styles.searchbarInput}
            />
...
